# MESH2026

./: .env.example  .gitignore  2026-06-26_vega-smart-trees.md  LICENSE  README.md  SUBMISSION_CLEANUP.md  pyproject.toml
.github/workflows/: ci.yml
3d/: SprigV2.step
backend/: .env.example  .gitignore  2026-06-26_vega-idea-exploration.md  PREDICTION_MODEL_PLAN.md  README.md  pyproject.toml
backend/esp32/: platformio.ini
backend/esp32/src/: main.cpp  sensors.h
backend/findings/: commercial-reference.md  costs.md  extensions.md  low-power-chips.md  multi-department-value.md  physical-design.md  power-budget.md  reality-check.md  sensors-lorawan.md  tree-costs-sourced.md  value-proposition-canvas.md
backend/scripts/: forecast_demo.py  regen_snapshot.py
backend/src/tests/: test_health.py
backend/src/vega/: auth.py  database.py  main.py  seed.py  seed_readings.py
data/: SOURCES.md
docs/: REPORT.md  build_report_pdf.py
esp32/: platformio.ini  sensor.ino.old  wiring.md
esp32/src/: main.cpp  sensors.cpp  sensors.h
findings/: commercial-reference.md  extensions.md  low-power-chips.md  multi-department-value.md  sensors-lorawan.md  value-proposition-canvas.md
frontend/: PITCH.md  README.md  next.config.ts  package-lock.json  package.json
frontend/hidden-slides/: H1-cheap.md  H2-route-planning.md  H3-vapour-modelling.md  build_slides_pdf.py
frontend/public/: heat.geojson  manifest.webmanifest  trees.geojson
frontend/public/qr/: index.html
frontend/src/app/: globals.css  layout.tsx  loading.tsx
src/tests/: __init__.py  conftest.py  test_health.py
src/vega/: __init__.py  config.py  database.py  main.py  seed.py
(+130 files in other folders)
