[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vega"
version = "0.1.0"
description = "VEGA — Sensor of Infinite Jest. Smart tree monitoring with citizen gamification."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "be tree", email = "hello@betree.dev" }
]
keywords = ["iot", "lorawan", "trees", "smart-city", "gamification", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "paho-mqtt>=2.0,<3",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
    "ruff>=0.5,<1",
    "mypy>=1.11,<2",
]

[project.scripts]
vega = "vega.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.isort]
known-first-party = ["vega"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
